--- a/Proposal_LMD_HWM.tex
+++ b/Proposal_LMD_HWM.tex
@@ -4,6 +4,8 @@
 \usepackage{titlesec, blindtext, color}                                  % standard packages
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor} % extra colors 
 \usepackage{graphicx}                                                       % figures
+\usepackage{caption}
+\usepackage{subcaption}
 %\usepackage{natbib}                                                          % bibliography
 \usepackage[english]{babel}                            % correct hyphenation (afbreekstreepjes)
 \usepackage{booktabs}                                                % for midrule in tables
@@ -40,12 +42,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
-	\chapter{\textbf{Preface}}
-	\\
-	Hi reader of this proposal!\\	
-	When reading this pre-proposal for the thesis ring, I would highly appreciate feedback on the Problem Description, the Research Questions (as I'm not sure how to differentiate those from the objectives) and the Method section. For the Method section, I'm particularly interested in hearing how the explanation of Neural Networks is received (subsections 5.1 and 5.2). Thanks in advance!
-	
-	\title{\vspace{-1cm}\Huge{Improving rainfall rate predictions via Commercial Microwave Link signals in Sri Lanka using Deep Transfer Learning}}
+	\title{\vspace{-1cm}\Huge{Improving rainfall rate measurements via Commercial Microwave Link signals in Sri Lanka using Deep Transfer Learning}}
 	\author{\Large{Ludo Diender}}
 	\date{\normalsize{MSc thesis proposal\\
 			Hydrology and Quantitative Water Management Group,
@@ -83,23 +80,42 @@
 	\subsection{The Netherlands}
 	The Dutch data used in this research is similar to previous research \cite{Overeem2016}.
 	The first research question will make use of the CML data from NEC and NOKIA microwave links, operated by T-Mobile. Both datasets span the period of 14 January 2011 to 30 July 2013, roughly 2,5 years. The data contains 3101 links, but as shown before \cite{Overeem2016}, not all of these links will be proven useful or available. The total number of actual links used will therefore be lower, depending on the quality. Received Signal Level (RSL)  is stored at 15-minute intervals, at which the minimum and maximum signal level over the time period are stored. The power resolution of the data is 1 dB (NOKIA) and 0.1 dB (NEC). 
-	Apart from the dynamic time signal data, static metadata is included as well. This includes coordinates of the start and end point of the link, distance between these points and frequency per link.
+	Apart from the dynamic time signal data, static metadata is included as well. This includes coordinates of the start and end point of the link, distance between these points and frequency per link. Figure \ref{fig:cmlnetworkmaps}a shows the distribution of the links throughout the Netherlands.
 	
 	As a reference, a gauge-adjusted radar rainfall dataset is used (freely available as "Radar precipitation climatology" via http://climate4impact.eu) with a resolution of 0.9 km\textsuperscript{2}. The radar is adjusted with the use of both the automated and  manual rain gauge network operated by the KNMI (Royal Dutch Meteorological Institute).
 	
 	
 	\subsection{Sri Lanka}
 	The Sri Lankan data is similar to previous research \cite{Overeem2021}.
-	The CML data in Sri Lanka spans 3,5 months (12 September 2012 to 31 December 2012) and similar to the Dutch data, is logged once every 15 minutes (minimum and maximum RSL). The dataset consists of on average 1140 link paths. Static data include start and end point of the link, link length and average frequency. Although the data is available throughout the whole country of Sri Lanka, the network density around the biggest city Colombo is significantly higher. PICTURE OF THE NETWORK IN SRI LANKA AND THE NETHERLANDS
+	The CML data in Sri Lanka spans 3,5 months (12 September 2012 to 31 December 2012) and similar to the Dutch data, is logged once every 15 minutes (minimum and maximum RSL). The dataset consists of on average 1140 link paths. Static data include start and end point of the link, link length and average frequency. Although the data is available throughout the whole country of Sri Lanka, the network density around the biggest city Colombo is significantly higher, which can be seen in figure \ref{fig:cmlnetworkmaps}b.
 	
 	
+	
+	
+	\begin{figure*}[h]
+		\hspace*{\fill}
+		\begin{subfigure}[h]{0.45\textwidth}
+			\includegraphics[height= 9cm]{Dutch_CML_network}
+			\caption{CML network in the Netherlands. Retrieved from \citeA{Overeem2016}}
+		\end{subfigure}
+		\hfill%
+		\begin{subfigure}[h]{0.45\textwidth}
+			\includegraphics[height=9cm]{SriLanka_CML_network}
+			\caption{CML network of Sri Lanka. Retrieved from \citeA{Overeem2021}}
+		\end{subfigure}
+		\hspace*{\fill}
+		\caption{The spatial distribution of the used CML networks}
+		\label{fig:cmlnetworkmaps}
+	\end{figure*}
+	
+	The reference dataset consists of manually operated rain gauges, operated by the Sri Lanka Department for Meteorology. Since there are only 36 rain gauges throughout Sri Lanka, a satellite rainfall product will be used to be able to analyze in more detail the performance of the CML. Satellite based estimates were retrieved from GPM's combined radar product. The precipitation satellite data is freely available (gpm.nasa.gov/data/directory).
 	
 	\section{Methods}
 	\subsection{Neural networks}
 	To conduct this research, I will make use of a neural network. Neural networks are part of deep learning. An input signal is transferred through different layers of the model. Every layer consists of different neurons (or nodes) that are able to extract features from the input signal. Every node consists of a weighted sum of the complete input signal. The weights that are given to the different values in this input signal, together with a bias that is added to this weighted sum, make up the parameter set of the neuron. 
 	The subsequent layers extract combinations out of the previous layer, until finally the network ends up with a prediction with a certain probability. By applying a loss function, the network can learn how to improve, by changing the different parameters in all neurons. The to-be-extracted features are unknown beforehand to the researcher. The network itself learns which features are interesting, separable and are helpful in classifying the specific signal. This is the cornerstone of machine learning/deep learning. 
 	
-	In this research I will use a Long Short Term Memory (LSTM) architecture for my neural network, which is part of a Recurrent Neural Networks (RNN). RNN a characterized by the recurrent use of the same bit of network, to keep on improving the prediction. The network has one or two layers, depending on the complexity of the features and the signal. The signal is then processed multiple times by the same two layers. RNN are designed for sequential data like the time signals that are used in this research. A disadvantage of RNN is the risk of vanishing or exploding gradients, due to the lack of memory in the network. LSTM resolve this issue by adding a memory to the model by using different gates to combine old and new data on every recurrent step of the network. The use of LSTM to create a network for CML data has been demonstrated before \cite{Habi2019, Diba2021, Pudashine2020}. The networks used in those studies will serve as a source of inspiration for this research. Other types of neural networks have been proposed as well \cite{Polz2020}, but as RNN (and specifically LSTM) are designed to work with sequential data, those are preferred in this research.
+	In this research I will use a Long Short Term Memory (LSTM) architecture as neural network, which is part of the family of Recurrent Neural Networks (RNN). RNN a characterized by the recurrent use of the same bit of network, to keep on improving the prediction. The network has one or two layers, depending on the complexity of the features and the signal. The signal is then processed multiple times by the same two layers. RNN are designed for sequential data like the time signals that are used in this research. A disadvantage of RNN is the risk of vanishing or exploding gradients, due to the lack of memory in the network. LSTM resolve this issue by adding a memory to the model by using different gates to combine old and new data on every recurrent step of the network. The use of LSTM to create a network for CML data has been demonstrated before \cite{Habi2019, Diba2021, Pudashine2020}. The networks used in those studies will serve as a source of inspiration for this research. Other types of neural networks have been proposed as well \cite{Polz2020}, but as RNN (and specifically LSTM) are designed to work with sequential data, those are preferred in this research.
 	
 	\subsection{Training, testing and transferring}
 	The  Dutch dataset as described in section 3 will be split up in two sets. One is dedicated to training the model and the other one will be used for testing. The training data is passed through the LSTM, the loss is calculated for each training sample and the network 'learns' (is updated) by using backward propagation. Backward propagation is a machine learning technique where the final layers are updated first and the updates move backwards through the model. 
@@ -112,19 +128,19 @@
 	
 	\subsection{2-D interpolated rainfall maps}
 	CNN's have been proposed to deal with spatial patterns in rainfall data \cite{Sadeghi2019}. Already 20 years ago, advances have been made in using neural networks for spatial interpolation of environmental variables \cite{Rigol2001}). In this research, a similar neural network structure will be proposed to interpolate the rainfall data obtained from CML. The interpolated map will be compared to a reference map created by using a gauge-adjusted radarproduct.
-	These neural networks need terrain information next to the data from the CML. The resulting interpolated maps are compared to more commonly used interpolation methods to see if the extra effort of using neural networks yields maps that more closely resemble the reference map. 
+	These neural networks need terrain information next to the data from the CML. The resulting interpolated maps are compared to more commonly used interpolation methods to see if the extra effort of using neural networks yields maps that more closely resemble the reference map.
 	
 	
 	\section{Timetable}
 	
-	Adapt the Table below to make it specific for your project (or make your own). Set deadlines for the products. Be as specific as possible: mention when you will collect which data /do which model runs / write which parts of the report. It often helps to link activities and products to your sub-questions. A specific planning can help later on to see if you are on schedule or that you should e.g. shorten a certain data-processing step or stop calibrating your model, so you have enough time to do the analyses and answer your research questions. It often helps to link the tasks to the methodology (and therefore to the research questions). Specify special conditions: are you planning to take courses, vacation, etc. 
+	Table \ref{tab:schedule} shows the proposed time planning of this research project. Please keep in mind that this planning is preliminary and subject to change. It is still uncertain exactly how challenging the construction and training of the neural networks is. It might take longer than expected. Interpolating using a neural network should be viewed as the bonus part of this reserach that is executed if time allows. If there is some time left, but not enough to tackle the interpolation question well, different research questions concerning the original neural network (and transferred network) will be explored.
 	
 	
 	% table with schedule
 	\begin{table*}[t]
 		\caption{Schedule of the project.}
 		\label{tab:schedule}
-		% \includegraphics[width=2.1\columnwidth, trim=5mm 80mm 5mm 18mm, clip=true]{figs/thesis_planning.pdf}
+		\includegraphics[width=2.1\columnwidth, clip=true]{images/Proposal Schedule.pdf}
 	\end{table*}
 	% If not the whole table is shown: adjust the numbers behind "trim". 
 	% Those are the cropped sides in the order left - bottom - right - top.
